@@ -1,3 +1,11 @@
+Fri Jan 23 02:59:28 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: added class GNewable which supplies new/delete operators
+	based on g_malloc()/g_free(). required, since our generated C++
+	classes mimick plain C records/sequences.
+
+	* sfidl-cxx.cc: derive Records from GNewable.
+
 Fri Jan 23 02:30:27 2004  Tim Janik  <timj@gtk.org>
 
 	* sficxx.h: added take() to Sequence, added steal() to Record
